--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".song.SongEditActivity"
+            android:parentActivityName=".song.SongActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.allesin1app.song.SongActivity" />
+        </activity>
         <activity
             android:name=".song.SongActivity"
             android:parentActivityName=".album.AlbumActivity"
