--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.allesin1app"
+        applicationId "com.example.MusicStorage"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
